--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 language: node_js
+node_js:
+  - node
 script:
   - npm run build &&
       [ "@$TRAVIS_BRANCH" = "@master" ] || exit 0 &&
